tests/paczka1/small_fuzzy/36824624.err
Error in line 2: nLK A697 71,4
Error in line 11: nLK S675 28,8
